--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.nav-line {
+   
+    
+        display: block;
+        -webkit-animation: thread2;
+        -moz-animation:    thread2;
+        -o-animation:      thread2;
+        animation:         thread2;
+        animation-duration: 0.5s;
+        animation-timing-function: ease-in;
+    
+    }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@-webkit-keyframes thread2 {
+	  0%   { width: 0px; }
+	  100%{ width:100%;}
+	}
+	@-moz-keyframes thread2 {
+	  0%   { width: 0px; }
+	  100%{ width:100%;}
+	}
+	@-o-keyframes thread2 {
+	  0%   { width: 0px; }
+	  100%{ width:100%;}
+	}
+	@keyframes thread2 {
+	  0%   { width: 0px; }
+	  100%{ width:100%;}
 }
