--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@layer utilities {
+   
 .nav-line {
    
     
@@ -30,4 +33,5 @@
 	@keyframes thread2 {
 	  0%   { width: 0px; }
 	  100%{ width:100%;}
+	}
 }
